# IDenSafe

./: .pre-commit-config.yaml  Makefile  README.md  config.example.py  factory.py  pyproject.toml
.github/workflows/: ruff.yml
assets/css/: dark.css  light.css  main.css
blueprints/: __init__.py
blueprints/admin/: routes.py
blueprints/app/: routes.py
blueprints/auth/: routes.py
blueprints/meta/: routes.py
templates/: navbar.html  scripts.html
templates/admin/: index.html
templates/app/: index.html
templates/auth/: kyc.html  settings.html  username.html
templates/meta/: index.html
utils/: crud.py  database.py  forms.py  models.py
