[project]
name = "IDenSafe"
version = "1.0.0"
description = "A proof-of-concept blockchain-based identity management system for KYC."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "flask-cors>=5.0.0",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.1",
    "siwe>=4.4.0",
    "web3>=7.5.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff==0.7.0",
]

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder", "config"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
"config" = ["config"]
